add contact us page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.11.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
     "react": "^19.1.0",
