--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.4",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
