--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/x-charts": "^8.10.2",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
